--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "jade": "~1.6.0",
-    "mysql": "2.5.0"
+    "mysql": "2.5.0",
+    "marked": "0.3.2"
   }
 }
