--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "koa-params": "1.1.0",
     "co-mysql": "0.4.1",
     "mysql": "2.5.0",
-    "marked": "0.3.2"
+    "marked": "0.3.2",
+    "moment": "2.8.3"
   }
 }
