--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koa-qs": "1.0.1",
     "koa-params": "1.1.0",
     "co-mysql": "0.4.1",
+    "co-body": "1.0.0",
     "mysql": "2.5.0",
     "marked": "0.3.2",
     "moment": "2.8.3"
