--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "mysql": "2.5.0",
     "marked": "0.3.2",
     "moment": "2.8.3",
-    "koa-static-cache": "2.0.0"
+    "koa-static-cache": "2.0.0",
+    "koa-generic-session": "1.3.0",
+    "koa-mysql-session": "0.0.2",
+    "extend": "2.0.0"
   }
 }
