--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "koa-static-cache": "2.0.0",
     "koa-generic-session": "1.3.0",
     "koa-mysql-session": "0.0.2",
-    "extend": "2.0.0"
+    "extend": "2.0.0",
+    "highlight.js": "8.4.0"
   }
 }
