--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "nodeserver",
+  "name": "geraldBlog",
   "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
   "dependencies": {
     "koa": "~0.12.1",
     "koa-jade": "~0.3.0",
@@ -22,6 +19,9 @@
     "koa-generic-session": "1.3.0",
     "koa-mysql-session": "0.0.2",
     "extend": "2.0.0",
-    "highlight.js": "8.4.0"
+    "highlight.js": "8.4.0",
+
+    "grunt-contrib-uglify": "0.2.7",
+    "grunt-contrib-concat": "0.2.7"
   }
 }
