--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "koa-mysql-session": "0.0.2",
     "extend": "2.0.0",
     "highlight.js": "8.4.0",
+    "rss": "1.1.1",
     "gravatar": "1.1.0",
     "grunt-contrib-uglify": "0.2.7",
     "grunt-contrib-concat": "0.2.7"
