--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "koa-favicon": "1.2.0",
     "gravatar": "1.1.0",
     "grunt-contrib-uglify": "0.2.7",
-    "grunt-contrib-concat": "*"
+    "grunt-contrib-concat": "*",
+    "grunt-contrib-cssmin": "*"
   }
 }
