--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gravatar": "1.1.0",
     "grunt-contrib-uglify": "0.2.7",
     "grunt-contrib-concat": "*",
-    "grunt-contrib-less": "*"
+    "grunt-contrib-less": "*",
+    "sitemap": "*"
   }
 }
