--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-contrib-uglify": "0.2.7",
     "grunt-contrib-concat": "*",
     "grunt-contrib-less": "*",
-    "sitemap": "*"
+    "sitemap": "*",
+    "sqlite3": "*"
   }
 }
